@@ -251,7 +251,7 @@ public class MultipleRenderTargetTest extends GdxTest {
 
 		frameBuffer.end();
 
-		mrtSceneShader.begin();
+		mrtSceneShader.bind();
 		mrtSceneShader.setUniformi("u_diffuseTexture",
 			renderContext.textureBinder.bind(frameBuffer.getTextureAttachments().get(DIFFUSE_ATTACHMENT)));
 		mrtSceneShader.setUniformi("u_normalTexture",
@@ -267,7 +267,6 @@ public class MultipleRenderTargetTest extends GdxTest {
 		mrtSceneShader.setUniformf("u_viewPos", camera.position);
 		mrtSceneShader.setUniformMatrix("u_inverseProjectionMatrix", camera.invProjectionView);
 		quad.render(mrtSceneShader, GL30.GL_TRIANGLE_FAN);
-		mrtSceneShader.end();
 		renderContext.end();
 
 
@@ -422,7 +421,7 @@ public class MultipleRenderTargetTest extends GdxTest {
 		@Override
 		public void begin (Camera camera, RenderContext context) {
 			this.context = context;
-			shaderProgram.begin();
+			shaderProgram.bind();
 			shaderProgram.setUniformMatrix("u_projViewTrans", camera.combined);
 			context.setDepthTest(GL20.GL_LEQUAL);
 			context.setCullFace(GL20.GL_BACK);
