@@ -46,8 +46,7 @@ public class HelloTriangle extends GdxTest {
 	public void render () {
 		Gdx.gl20.glViewport(0, 0, Gdx.graphics.getBackBufferWidth(), Gdx.graphics.getBackBufferHeight());
 		Gdx.gl20.glClear(GL20.GL_COLOR_BUFFER_BIT);
-		shader.begin();
+		shader.bind();
 		mesh.render(shader, GL20.GL_TRIANGLES);
-		shader.end();
 	}
 }
